# PipelineAgent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture_and_semantics.md  phase_review_and_roadmap.md
examples/: basic_agent.py  llm_provider_switch.py  mcp_agent_demo.py  resource_management_demo.py
pipeline_agent/: __init__.py  config.py  core.py  exceptions.py  runner.py
pipeline_agent/benchmarks/: langchain_vs_pipeline.py
pipeline_agent/engine/: __init__.py  engine.py
pipeline_agent/mcp/: client.py
pipeline_agent/planner/: __init__.py  planner.py
pipeline_agent/schemas/: __init__.py  schema.py
pipeline_agent/tools/: __init__.py  tools.py
pipeline_agent/utils/: checkpoint.py  logger.py
tests/: test_engine.py
