[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-agent"
version = "0.1.1"
authors = [
  { name="Gary Chang" , email="gary880413@gmail.com"},
]
description = "An asynchronous AI Agent framework purpose-built for Cloud-Edge Collaboration with native MCP support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.14.0",      
    "pydantic>=2.0.0",     
    "mcp>=1.0.0",          
    "python-dotenv>=1.0.0" 
]

[project.urls]
"Homepage" = "https://github.com/gary880413/PipelineAgent"
"Bug Tracker" = "https://github.com/gary880413/PipelineAgent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "mypy"
]